RESOLVED FIXED212052
ASSERTION FAILED: media/modern-media-controls/media-controller/media-controller-resize.html crashes under stress tests
https://bugs.webkit.org/show_bug.cgi?id=212052
Summary ASSERTION FAILED: media/modern-media-controls/media-controller/media-controll...
Peng Liu
Reported 2020-05-18 16:20:05 PDT
DumpRenderTree crashes at WebCore::HTMLMediaElement::exitFullscreen
Attachments
Patch (1.62 KB, patch)
2020-05-18 16:35 PDT, Peng Liu
jer.noble: review+
Patch for landing (1.67 KB, patch)
2020-05-18 17:26 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-05-18 16:20:54 PDT
Peng Liu
Comment 2 2020-05-18 16:35:31 PDT
Jer Noble
Comment 3 2020-05-18 16:39:36 PDT
Comment on attachment 399682 [details] Patch r=me. It looks like this fixes an ASSERT, not a crash in release builds; you may want to update the bug title to reflect that.
Peng Liu
Comment 4 2020-05-18 17:26:51 PDT
Created attachment 399687 [details] Patch for landing
EWS
Comment 5 2020-05-18 21:24:56 PDT
Committed r261847: <https://trac.webkit.org/changeset/261847> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399687 [details].
Note You need to log in before you can comment on or make changes to this bug.