ASSERTION FAILED: media/modern-media-controls/media-controller/media-controller-resize.html crashes under stress tests https://bugs.webkit.org/show_bug.cgi?id=212052

Reviewed by Jer Noble.

Not able to reproduce the crash locally. But it does happen under stress tests
on bots.

* WebView/WebVideoFullscreenController.mm:
(-[WebVideoFullscreenController windowDidExitFullScreen:]):
Only call HTMLMediaElement::exitFullscreen() when the element is in fullscreen.


Canonical link: https://commits.webkit.org/224937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261847 268f45cc-cd09-0410-ab3c-d52691b4dbfc